[package]
name = "candlecompare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned_box = "0.2.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = [] }
packed_simd = { version = "0.3.9", optional=true }
rand = "0.8.5"

[features]
simd = ["packed_simd"]
